apps/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
    name: pihole-web
    namespace: pihole
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: pihole
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: pihole-web-0
    namespace: pihole
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: pihole
        statefulset.kubernetes.io/pod-name: pihole-0
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: pihole-web-1
    namespace: pihole
spec:
    ports:
        - name: http
          port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: pihole
        statefulset.kubernetes.io/pod-name: pihole-1
    type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
    name: pihole-dns-tcp
    namespace: pihole
    annotations:
        metallb.universe.tf/allow-shared-ip: pihole
spec:
    externalTrafficPolicy: Local
    ports:
        - name: dns-tcp
          port: 53
          protocol: TCP
          targetPort: 53
    selector:
        app: pihole
    sessionAffinity: None
    type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
    name: pihole-dns-udp
    namespace: pihole
    annotations:
        metallb.universe.tf/allow-shared-ip: pihole
spec:
    externalTrafficPolicy: Local
    ports:
        - name: dns-udp
          port: 53
          protocol: UDP
          targetPort: 53
    selector:
        app: pihole
    sessionAffinity: None
    type: LoadBalancer
